fix(*): prevent horizontal scrollbars on iPhone 4
On iPhone with iOS <=6 there seems to be a bug
with absolute positioned elements causing
horizontal scrollbars for no reason.

We need to position the pages absolutely during
the page transitions. Previously they were
just absolutely positioned all the time, now
we just absolutely position them during the
transition and have them positioned relative
for the rest of the time

--- a/sdk/src/styling/animations.scss
+++ b/sdk/src/styling/animations.scss
@@ -5,7 +5,7 @@ $slide-easing: ease-out;
 .slide-in-rtl {
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(100%,0,0));
 }
  
@@ -18,7 +18,7 @@ $slide-easing: ease-out;
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(0%,0,0));
 }
  
@@ -30,7 +30,7 @@ $slide-easing: ease-out;
 .slide-in-ltr {
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(-100%,0,0));
 }
  
@@ -43,7 +43,7 @@ $slide-easing: ease-out;
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(0%,0,0));
 }
  
@@ -55,7 +55,7 @@ $slide-easing: ease-out;
 .slide-in-ttb {
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(0,-100%,0));
 }
  
@@ -68,7 +68,7 @@ $slide-easing: ease-out;
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(0%,0,0));
 }
  
@@ -80,7 +80,7 @@ $slide-easing: ease-out;
 .slide-in-btt {
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(0,100%,0));
 }
  
@@ -93,7 +93,7 @@ $slide-easing: ease-out;
  @include vendor-prefix('transition', all $slide-duration $slide-easing);
  
  /* The animation preparation code */
- position: relative;
+ position: absolute;
  @include vendor-prefix('transform',translate3d(0%,0,0));
 }
  
